@@ -1,3 +1,11 @@
+2009-06-04  Martin Schröder <martin@oneiros.de>
+
+	Import libpng-1.2.37.
+
+	* configure.ac: switch libpng version number.
+	* svn mv libpng-1.2.36 libpng-1.2.37: update source tree.
+	* update files in libpng-1.2.37.
+
 2009-05-08  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Import libpng-1.2.36.
